[package]
authors = [
    "Alberto Colombo <albx79@gmail.com>",
    "Danilo Marino <danilo.marino@coldiretti.it>"
]
categories = ["management", "e-commerce"]
description = "Private project for CampagnAmica"
edition = "2018"
license = "MIT/Apache-2.0"
name = "campagnamica"
readme = "README.md"
repository = "https://github.com/albx79/campagnamica"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17.4"
derive_builder = "0.9.0"
csv = "1.1.5"
stdweb = "0.4.20"
itertools = "0.10"
anyhow = "1.0"